--- a/TODO.txt
+++ b/TODO.txt
@@ -6,6 +6,8 @@ To insert ISSY in TS, we should have some reserve of time
 
 2) CRC-8 is calculated on negedge to be on time. May be dangerous
 
-3) InsertTables module is written too complicated. Need to optimize
+3) input_ts_prepare module needs to be re-architected, looks unoptimal
 
-4) Used 2 FIFOs: input and output. The output is not necessary, it is made to simplify logic. Need to make TS2T2MIpackets module work only when T2MIoverTS has state: insert_payload
+4) Still haven't decided, to reset modules: "ts_to_t2mi_packets" and "t2mi_over_ts" on sync loss or not
+
+5) input FIFO may fullfill (has capacity 64 words) on bitrates ~50 Mbps
